spot operations updates
  - deployerbooks updates
  - ansible updates

--- a/ansiblebooks/inventory/robot.ini
+++ b/ansiblebooks/inventory/robot.ini
@@ -71,6 +71,11 @@ ansible_ssh_user=nuc
 [robot-ugv3-xavier:vars]
 ansible_ssh_user=xavier
 
+# == Spot General ==
+
+[spot:vars]
+ansible_ssh_common_args='-F inventory/ssh-robot.cfg'
+
 # == Spot1 ==
 
 [robot-spot1-nuc:vars]
