--- a/deploybooks/env/platform.header.env.yaml
+++ b/deploybooks/env/platform.header.env.yaml
@@ -61,5 +61,6 @@
 
     export DOCKER_BASE_IMAGE_PROJECT=${SCENARIOS_PLATFORM};
 
+    echo "we are here?";
     source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${SCENARIOS_PLATFORM}.env ${ROBOT};
   }
