--- a/scenarios/.shared.env
+++ b/scenarios/.shared.env
@@ -70,3 +70,12 @@ export nuc_deploy_remote_hostname=nuc
 export xavier_deploy_remote_username=nvidia
 export xavier_deploy_remote_hostname=xavier
 
+# -- robot (spot) remote --
+
+# remote nuc computer
+export spot_nuc_deploy_remote_username=subt
+export spot_nuc_deploy_remote_hostname=spot1-nuc
+
+# remote xavier computer
+export spot_xavier_deploy_remote_username=capsa
+export spot_xavier_deploy_remote_hostname=spot1-xavier
