--- a/ansiblebooks/tasks/ros.yaml
+++ b/ansiblebooks/tasks/ros.yaml
@@ -118,12 +118,12 @@
     - name: bash environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.bash', file: "/home/{{ lookup('env', 'USER') }}/.bashrc" }
+        - { line: 'source /opt/ros/melodic/setup.bash', file: "/home/capsa/.bashrc" }
       when: install_ros
 
     - name: check that zshrc exists
       stat:
-        path: /home/{{ lookup('env', 'USER') }}/.zshrc
+        path: /home/capsa/.zshrc
       register: stat_result
       when: >
         inventory_hostname is not match("azure-*")
@@ -131,19 +131,8 @@
     - name: zsh environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/{{ lookup('env', 'USER') }}/.zshrc" }
+        - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/capsa/.zshrc" }
       when:
         install_ros and stat_result.stat.exists and
         inventory_hostname is not match("azure-*")
 
-    - name: install nuc prerequisite packages
-      become: true
-      apt:
-        name: "{{ ros.nuc.packages }}"
-        state: present
-        force: yes          # force yes
-        force_apt_get: yes
-        install_recommends: yes
-        update_cache: yes   # force apt-get update
-      when: >
-        inventory_hostname is match("robot-ugv.*-nuc")
