--- a/deploybooks/main/main.yaml
+++ b/deploybooks/main/main.yaml
@@ -125,9 +125,12 @@
       - +extend: main/platforms/ugv.nuc.plt
       - +extend: main/platforms/ugv.xavier.plt
 
-    # - spot1:
-    #   - +env:ROBOT=spot1
-    #   - +extend: main/platforms/ugv.spot.plt
+  - spot:
+    - export PLATFORM=spot
+    - spot1:
+      - +env:ROBOT=spot1
+      - +extend: main/platforms/spot.nuc.plt
+      - +extend: main/platforms/spot.xavier.plt
 
   - uav:
     - export PLATFORM=uav
