--- a/docker/dockerfiles/compose/spot.nuc.robot.yml
+++ b/docker/dockerfiles/compose/spot.nuc.robot.yml
@@ -34,7 +34,7 @@ services:
     image: ${DOCKER_IMAGE_NAME}
     build:
       context:    ${SUBT_DOCKERFILE_PATH}/
-      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.ugv.nuc.dockerfile
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.spot.nuc.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
     container_name: $ROBOT-core-shell
@@ -42,17 +42,3 @@ services:
     tty: true # keep container running
     environment:
       - ws_devel_source=$UGV_NUC_WS_SOURCE
-
-  # @brief UGV, Superodometry
-  spot.nuc-slam:
-    image: ${DOCKER_IMAGE_NAME}
-    build:
-      context:    ${SUBT_DOCKERFILE_PATH}/
-      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.ugv.nuc.dockerfile
-    extends:
-      service: ${DOCKER_COMPOSE_BASE_SERVICE}
-    container_name: $ROBOT-slam-shell
-    entrypoint: $entry_path/ws-shell.bash
-    tty: true # keep container running
-    environment:
-      - ws_devel_source=$UGV_SLAM_WS_SOURCE
