--- a/deploybooks/main/platforms/spot.nuc.plt.yaml
+++ b/deploybooks/main/platforms/spot.nuc.plt.yaml
@@ -5,7 +5,7 @@
   # run on the remote server (except for any books that specific +local, to force local deployment)
   - +ssh:{ $ROBOT.$ROBOT_COMPUTER }
 
-  # setup the configurations for a 'robot ugv', for the robot computer split
+  # setup the configurations for a 'robot spot', for the robot computer split
   - set_docker_context
   - set_scenarios_configuration
 
@@ -13,5 +13,5 @@
   - +extend: common/sync
   - +extend: common/install
 
-  # extend ugv nuc workspace
+  # extend spot nuc workspace
   - +extend: workspaces/spot.nuc
