spot, change nuc username

--- a/ansiblebooks/inventory/ssh-robot.cfg
+++ b/ansiblebooks/inventory/ssh-robot.cfg
@@ -81,7 +81,7 @@ Host robot-ugv3-xavier
 
 Host robot-spot1-nuc
   HostName spot1-nuc
-  User subt
+  User nuc
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
