--- a/ansiblebooks/tasks/ros.yaml
+++ b/ansiblebooks/tasks/ros.yaml
@@ -118,12 +118,12 @@
     - name: bash environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.bash', file: "/home/capsa/.bashrc" }
+        - { line: 'source /opt/ros/melodic/setup.bash', file: "/home/{{ lookup('env', 'USER') }}/.bashrc" }
       when: install_ros
 
     - name: check that zshrc exists
       stat:
-        path: /home/capsa/.zshrc
+        path: /home/{{ lookup('env', 'USER') }}/.zshrc
       register: stat_result
       when: >
         inventory_hostname is not match("azure-*")
@@ -131,7 +131,7 @@
     - name: zsh environment setup
       lineinfile: dest={{ item.file }} state=present line={{ item.line }}
       with_items:
-        - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/capsa/.zshrc" }
+        - { line: 'source /opt/ros/melodic/setup.zsh', file: "/home/{{ lookup('env', 'USER') }}/.zshrc" }
       when:
         install_ros and stat_result.stat.exists and
         inventory_hostname is not match("azure-*")
