--- a/deploybooks/workspaces/spot.xavier.yaml
+++ b/deploybooks/workspaces/spot.xavier.yaml
@@ -1,6 +1,40 @@
 - scenarios:
   - +extend: workspaces/shared/melodic
-  # TODO: chonky...
+  
+  - cameras:
+    # setup docker service name
+    - export SERVICE=cameras
+
+    # setup pre-defined environment variables, for workspace env import
+    - +env:DOCKER_CONTAINER=${ROBOT}-cameras-shell
+
+    # import the workspace environment setup
+    - set_workspace_configuration
+    - set_docker_compose_service
+
+    # extend general actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+  - perception:
+    # setup docker service name
+    - export SERVICE=perception
+
+    # setup pre-defined environment variables, for workspace env import
+    - +env:DOCKER_CONTAINER=${ROBOT}-perception-shell
+
+    # import the workspace environment setup
+    - set_workspace_configuration
+    - set_docker_compose_service
+
+    # extend general actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
 
   - core:
     # setup docker service name
@@ -33,3 +67,32 @@
         - +extend: catkin/clean
       - +extend: catkin/perception
       - +extend: catkin/subt_launch
+
+  - autonomy:
+    # setup docker service name
+    - export SERVICE=autonomy
+
+    # setup pre-defined environment variables, for workspace env import
+    - +env:DOCKER_CONTAINER=${ROBOT}-autonomy-shell
+
+    # import the workspace environment setup
+    - set_workspace_configuration
+    - set_docker_compose_service
+
+    # extend general actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+    - catkin:
+      - export CATKIN_PROFILE=spot.xavier
+      - +import:env/catkin.env
+
+      - source /opt/ros/melodic/setup.bash
+      - +extend: catkin/common
+      - +extend: catkin/ugv
+      - +extend: catkin/subt_launch
+    
