--- a/docker/dockerfiles/compose/spot.xavier.robot.yml
+++ b/docker/dockerfiles/compose/spot.xavier.robot.yml
@@ -6,25 +6,79 @@ services:
 
   # @brief Spot, base, ROS
   spot.xavier-ros:
-    image: subt/perception-arm:ros # ${DOCKER_IMAGE_NAME}
+    image: ${DOCKER_IMAGE_NAME}
     build:
       context:    ${SUBT_DOCKERFILE_PATH}/
-      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.base.ros.dockerfile
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.base.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
     container_name: ros-shell
     entrypoint: $entry_path/ros-shell.bash
     tty: true # keep container running
 
-  # @brief Spot, planning-pc
+  # @brief Spot, cameras
+  spot.xavier-cameras:
+    image: ${DOCKER_IMAGE_NAME}
+    build:
+      context:    ${SUBT_DOCKERFILE_PATH}/
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.cameras.dockerfile
+    extends:
+      service: ${DOCKER_COMPOSE_BASE_SERVICE}
+    container_name: $ROBOT-cameras-shell
+    entrypoint: $entry_path/objdet-shell.bash
+    privileged: true
+    tty: true # keep container running
+    environment:
+      - ws_devel_source=$UGV_XAVIER_WS_SOURCE
+    volumes:
+      # Mount the flir and scd
+      - /dev/subt:/dev/subt
+
+  # @brief Spot, cameras
+  spot.xavier-perception:
+    image: ${DOCKER_IMAGE_NAME}
+    build:
+      context:    ${SUBT_DOCKERFILE_PATH}/
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.perception.dockerfile
+    extends:
+      service: ${DOCKER_COMPOSE_BASE_SERVICE}
+    container_name: $ROBOT-perception-shell
+    entrypoint: $entry_path/ros-shell.bash
+    privileged: true
+    tty: true # keep container running
+    environment:
+      - ws_devel_source=$UGV_XAVIER_WS_SOURCE
+    volumes:
+      # Mount the flir and scd
+      - /dev/subt:/dev/subt
+
+  # @brief Spot, core perception
   spot.xavier-core:
     image: ${DOCKER_IMAGE_NAME}
     build:
       context:    ${SUBT_DOCKERFILE_PATH}/
-      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.perception.supplement.dockerfile
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.core.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
     container_name: $ROBOT-core-shell
+    entrypoint: $entry_path/objdet-shell.bash
+    privileged: true
+    tty: true # keep container running
+    environment:
+      - ws_devel_source=$UGV_XAVIER_WS_SOURCE
+    volumes:
+      # Mount the flir and scd
+      - /dev/subt:/dev/subt
+
+  # @brief Spot, autonomy
+  spot.xavier-autonomy:
+    image: ${DOCKER_IMAGE_NAME}
+    build:
+      context:    ${SUBT_DOCKERFILE_PATH}/
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.autonomy.dockerfile
+    extends:
+      service: ${DOCKER_COMPOSE_BASE_SERVICE}
+    container_name: $ROBOT-autonomy-shell
     entrypoint: $entry_path/objdet-shell.bash
     privileged: true
     tty: true # keep container running
