--- a/docker/dockerfiles/compose/spot.xavier.robot.yml
+++ b/docker/dockerfiles/compose/spot.xavier.robot.yml
@@ -52,6 +52,24 @@ services:
       # Mount the flir and scd
       - /dev/subt:/dev/subt
 
+  # @brief Spot, drivers
+  spot.xavier-drivers:
+    image: ${DOCKER_IMAGE_NAME}
+    build:
+      context:    ${SUBT_DOCKERFILE_PATH}/
+      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.drivers.dockerfile
+    extends:
+      service: ${DOCKER_COMPOSE_BASE_SERVICE}
+    container_name: $ROBOT-drivers-shell
+    entrypoint: $entry_path/objdet-shell.bash
+    privileged: true
+    tty: true # keep container running
+    environment:
+      - ws_devel_source=$UGV_XAVIER_WS_SOURCE
+    volumes:
+      # Mount the flir and scd
+      - /dev/subt:/dev/subt
+
   # @brief Spot, core perception
   spot.xavier-core:
     image: ${DOCKER_IMAGE_NAME}
@@ -70,20 +88,3 @@ services:
       # Mount the flir and scd
       - /dev/subt:/dev/subt
 
-  # @brief Spot, autonomy
-  spot.xavier-autonomy:
-    image: ${DOCKER_IMAGE_NAME}
-    build:
-      context:    ${SUBT_DOCKERFILE_PATH}/
-      dockerfile: ${SUBT_DOCKERFILE_PATH}/services/arm.spot.autonomy.dockerfile
-    extends:
-      service: ${DOCKER_COMPOSE_BASE_SERVICE}
-    container_name: $ROBOT-autonomy-shell
-    entrypoint: $entry_path/objdet-shell.bash
-    privileged: true
-    tty: true # keep container running
-    environment:
-      - ws_devel_source=$UGV_XAVIER_WS_SOURCE
-    volumes:
-      # Mount the flir and scd
-      - /dev/subt:/dev/subt
