--- a/scenarios/systems/robot/spot.xavier.env
+++ b/scenarios/systems/robot/spot.xavier.env
@@ -30,11 +30,21 @@ export GPU_ENABLE_TYPE="arm-gpu-chonky"
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
 export deploy_rsync_opts="$deploy_rsync_opts
-  --exclude=src/uav/"
+  --exclude=src/uav/
+  --exclude=src/ugv/planning-pc/
+  --exclude=src/ugv/nuc/
+  --exclude=src/ugv/simulation/
+  --exclude=src/ugv/hardware/xsens_cpp_driver/
+  --exclude=src/ugv/hardware/xsense_driver/"
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=src/uav/"
+  --exclude=src/uav/
+  --exclude=src/ugv/planning-pc/
+  --exclude=src/ugv/nuc/
+  --exclude=src/ugv/simulation/
+  --exclude=src/ugv/hardware/xsens_cpp_driver/
+  --exclude=src/ugv/hardware/xsense_driver/"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
