rename spot nuc username

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -223,7 +223,7 @@ services:
     extra_hosts:
       # Basestation
       - ${basestation_hostname}:${basestation_ip}
-      - ${bs_hostname}:${bs_ip}
+      # - ${bs_hostname}:${bs_ip}
       # UGV
       - ${ugv1_hostname}:${ugv1_ip}
       - ${ugv2_hostname}:${ugv2_ip}
