--- a/scenarios/systems/local/basestation.env
+++ b/scenarios/systems/local/basestation.env
@@ -12,5 +12,9 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 # source the robot IP and hostname configuration
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} basestation
 
+# export basestation ROS Master
+export ROS_MASTER_IP=$bs_ip
+export ROS_HOSTNAME=$bs_hostname
+
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
