--- a/scenarios/systems/robot/basestation.env
+++ b/scenarios/systems/robot/basestation.env
@@ -15,12 +15,11 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 # source the robot IP and hostname configuration
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} basestation
 
-# export the scenario file
-export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
-
+# export basestation ROS Master
 export ROS_MASTER_IP=$bs_ip
 export ROS_HOSTNAME=$bs_hostname
 
-# remove this?
-# export basestation_ip=$basestation_host_ip
-# export basestation_hostname=$basestation_host_hostname
+# export the scenario file
+export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
+
+
