--- a/scenarios/.shared.env
+++ b/scenarios/.shared.env
@@ -50,6 +50,7 @@ export azure_deploy_remote_hostname=azure-${ROBOT}
 # deployer, configuration to ssh into the remote host
 # - UAV_COMPUTER example: ds1, ds2, etc.
 export robot_uav_deploy_ssh=${ROBOT}.ds
+export robot_canary_deploy_ssh=${ROBOT}.canary
 
 # remote uav, ds computer
 export robot_uav_deploy_remote_username=uav
