adding missing canary ansible configs

--- a/ansiblebooks/inventory/robot.ini
+++ b/ansiblebooks/inventory/robot.ini
@@ -25,6 +25,7 @@ robot-uav-ds1
 robot-uav-ds2
 robot-uav-ds3
 robot-uav-ds4
+robot-uav-canary1
 
 # ansible extra variable setup for each host
 
@@ -44,7 +45,7 @@ ansible_ssh_common_args='-F inventory/ssh-robot.cfg'
 ansible_ssh_user=explorer
 
 [robot-ugv1-nuc:vars]
-ansible_ssh_user=xavier
+ansible_ssh_user=nuc
 
 [robot-ugv1-xavier:vars]
 ansible_ssh_user=nvidia
@@ -63,13 +64,13 @@ ansible_ssh_user=nvidia
 # == UGV3 ==
 
 [robot-ugv3-ppc:vars]
-ansible_ssh_user=ugv3
+ansible_ssh_user=explorer
 
 [robot-ugv3-nuc:vars]
 ansible_ssh_user=nuc
 
 [robot-ugv3-xavier:vars]
-ansible_ssh_user=xavier
+ansible_ssh_user=nvidia
 
 # == Spot General ==
 
@@ -79,10 +80,10 @@ ansible_ssh_common_args='-F inventory/ssh-robot.cfg'
 # == Spot1 ==
 
 [robot-spot1-nuc:vars]
-ansible_ssh_user=subt
+ansible_ssh_user=explorer
 
 [robot-spot1-xavier:vars]
-ansible_ssh_user=capsa
+ansible_ssh_user=nvidia
 
 # == UAVs ==
 
@@ -97,3 +98,6 @@ ansible_ssh_user=uav
 
 [robot-uav-ds4]
 ansible_ssh_user=uav
+
+[robot-uav-canary1]
+ansible_ssh_user=snuc
