--- a/ansiblebooks/inventory/ssh-robot.cfg
+++ b/ansiblebooks/inventory/ssh-robot.cfg
@@ -80,15 +80,15 @@ Host robot-ugv3-xavier
 # == Spot1 ==
 
 Host robot-spot1-nuc
-  HostName spot1-nuc
-  User nuc
+  HostName spot1
+  User explorer
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
 
 Host robot-spot1-xavier
-  HostName spot1-xavier
-  User capsa
+  HostName xavier
+  User nvidia
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
@@ -119,6 +119,13 @@ Host robot-uav-ds3
 Host robot-uav-ds4
   HostName ds4
   User uav
+  StrictHostKeyChecking no
+  IdentitiesOnly yes
+  IdentityFile ~/.ssh/deploy
+
+Host robot-uav-canary1
+  HostName canary1
+  User snuc
   StrictHostKeyChecking no
   IdentitiesOnly yes
   IdentityFile ~/.ssh/deploy
