--- a/deploybooks/workspaces/spot.xavier.yaml
+++ b/deploybooks/workspaces/spot.xavier.yaml
@@ -35,6 +35,22 @@
     - docker:
       - +extend: common/docker/registry
       - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+    - catkin:
+      - export CATKIN_PROFILE=spot.xavier.perception
+      - +import:env/catkin.env
+
+      - source /opt/ros/melodic/setup.bash
+      - +extend: catkin/common
+      - deps:
+        - export CATKIN_WORKSPACE=perception/deps/catkin
+        - +extend: catkin/build
+        - +extend: catkin/clean
+      - +extend: catkin/perception
+      - +extend: catkin/subt_launch
 
   - drivers:
     # setup docker service name
@@ -56,13 +72,12 @@
       - +extend: common/docker/rm
 
     - catkin:
-      - export CATKIN_PROFILE=spot.xavier
+      - export CATKIN_PROFILE=spot.xavier.drivers
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
       - +extend: catkin/ugv
       - +extend: catkin/subt_launch
-    
 
   - core:
     # setup docker service name
@@ -82,16 +97,11 @@
       - +extend: common/docker/start
       - +extend: common/docker/stop
       - +extend: common/docker/rm
-
+    
     - catkin:
-      - export CATKIN_PROFILE=perception.${COMPUTER_ARCH}
+      - export CATKIN_PROFILE=spot.xavier.core
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
-      - +extend: catkin/common
-      - deps:
-        - export CATKIN_WORKSPACE=perception/deps/catkin
-        - +extend: catkin/build
-        - +extend: catkin/clean
-      - +extend: catkin/perception
+      - +extend: catkin/ugv
       - +extend: catkin/subt_launch
