test offline container

--- a/deploybooks/main/main.yaml
+++ b/deploybooks/main/main.yaml
@@ -15,6 +15,7 @@
 
   # extend simulation platforms
   - +extend: main/platforms/basestation.plt
+  - +extend: main/platforms/offline.plt
 
   - ugv:
     - export PLATFORM=ugv
