--- a/scenarios/systems/local/offline.env
+++ b/scenarios/systems/local/offline.env
@@ -12,5 +12,10 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 # source the robot IP and hostname configuration
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} offline
 
+# override shared parameters
+export ROBOT_ROS_MASTER_IP=$SUBT_DEPLOYER_BASESTATION_IP
+export ROS_MASTER_IP=$SUBT_DEPLOYER_BASESTATION_IP
+export ROS_HOSTNAME=$SUBT_DEPLOYER_BASESTATION_HOSTNAME
+
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
