--- a/deploybooks/workspaces/offline.yaml
+++ b/deploybooks/workspaces/offline.yaml
@@ -13,8 +13,12 @@
     - set_docker_compose_service
 
     # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
 
     - catkin:
       - export CATKIN_PROFILE=offline.core
