update to minor missing spot docker libs

--- a/deploybooks/workspaces/spot.nuc.yaml
+++ b/deploybooks/workspaces/spot.nuc.yaml
@@ -31,11 +31,15 @@
 
       - +extend: catkin/common
       # ugly hack...
-      - export CATKIN_PROFILE=spot.nuc.ppc
-      - +extend: catkin/ugv
+      - ppc:
+        - export CATKIN_PROFILE=spot.nuc.ppc
+        - +extend: catkin/ugv
+      # ugly hack...
+      - nuc:
+        - export CATKIN_PROFILE=spot.nuc.nuc
+        - +extend: catkin/ugv
       # ugly hack...
       - export CATKIN_PROFILE=spot.nuc.core
-      - +extend: catkin/ugv
       - +extend: catkin/uav
       - +extend: catkin/subt_launch
 
