--- a/scenarios/systems/robot/spot.nuc.env
+++ b/scenarios/systems/robot/spot.nuc.env
@@ -17,7 +17,7 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 
 # Setup the bashrc roscore environment variables
 export ROS_MASTER_IP=${ppc_ip}
-export ROS_HOSTNAME=${nuc_hostname}
+export ROS_HOSTNAME=${ROBOT}
 
 # deployer, configuration to ssh into the remote host (basestation, ssh)
 export deploy_remote_username=$spot_nuc_deploy_remote_username
@@ -30,8 +30,7 @@ export deploy_rsync_opts="$deploy_rsync_opts"
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=*.git/
-  --exclude=src/uav/"
+  --exclude=*.git/"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
