--- a/deploybooks/workspaces/offline.yaml
+++ b/deploybooks/workspaces/offline.yaml
@@ -13,12 +13,8 @@
     - set_docker_compose_service
 
     # extend general actions
-    - docker:
-      - +extend: common/docker/registry
-      - +extend: common/docker/make
-      - +extend: common/docker/start
-      - +extend: common/docker/stop
-      - +extend: common/docker/rm
+    - +extend: common/docker.registry
+    - +extend: common/docker
 
     - catkin:
       - export CATKIN_PROFILE=default
