fixing offline typos

--- a/deploybooks/workspaces/offline.yaml
+++ b/deploybooks/workspaces/offline.yaml
@@ -17,6 +17,7 @@
     - +extend: common/docker
 
     - catkin:
-      - export CATKIN_PROFILE=default
+      - export CATKIN_PROFILE=offline.core
       - +import:env/catkin.env
       - +extend: catkin/offline
+      - +extend: catkin/subt_launch
