--- a/docker/dockerfiles/compose/offline.simulation.yml
+++ b/docker/dockerfiles/compose/offline.simulation.yml
@@ -25,11 +25,11 @@ services:
       dockerfile: ${SUBT_DOCKERFILE_PATH}/services/x86.base.offline.dockerfile
     extends:
       service: ${DOCKER_COMPOSE_BASE_SERVICE}
-    hostname: ${SUBT_DEPLOYER_BASESTATION_HOSTNAME}
+    # hostname: ${SUBT_DEPLOYER_BASESTATION_HOSTNAME}
     network_mode: "host"
     container_name: offline-core-shell
     entrypoint: $entry_path/ws-shell.bash
     tty: true # keep container running
     environment:
-      - ws_devel_source=/home/developer/$DEPLOYER_WS_NAME/devel/offline/setup.bash
+      - ws_devel_source=$OFFLINE_WS_SOURCE
 
