--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -59,6 +59,7 @@ export UGV_SLAM_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/slam/launch/setup.bash"
 export UGV_SIM_WS_SOURCE="$DEPLOY_WS_PREFIX/ugv/launch/setup.bash"
 export UGV_PERCEPTION_WS_SOURCE="$DEPLOY_WS_PREFIX/perception/launch/setup.bash"
 export UAV_WS_SOURCE="$DEPLOY_WS_PREFIX/uav/launch/setup.bash"
+export OFFLINE_WS_SOURCE="$DEPLOY_WS_PREFIX/offline/launch/setup.bash"
 
 # set the uav entrypoint (docker-compose for uav.simulation and uav.robot)
 export UAV_DOCKER_ENTRYPOINT="ws-shell.bash"
