--- a/scenarios/systems/local/offline.env
+++ b/scenarios/systems/local/offline.env
@@ -13,9 +13,9 @@ SOURCED_FILE_PATH=$(dirname "${BASH_SOURCE}")
 . ${SOURCED_FILE_PATH}/../../.shared.env ${1} offline
 
 # override shared parameters
-export ROBOT_ROS_MASTER_IP=$SUBT_DEPLOYER_BASESTATION_IP
-export ROS_MASTER_IP=$SUBT_DEPLOYER_BASESTATION_IP
-export ROS_HOSTNAME=$SUBT_DEPLOYER_BASESTATION_HOSTNAME
+export ROBOT_ROS_MASTER_IP="127.0.0.1"
+export ROS_MASTER_IP="127.0.0.1"
+export ROS_HOSTNAME="localhost"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
