--- a/scenarios/systems/robot/ugv.xavier.env
+++ b/scenarios/systems/robot/ugv.xavier.env
@@ -30,13 +30,11 @@ export GPU_ENABLE_TYPE="arm-gpu-chonky"
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
 export deploy_rsync_opts="$deploy_rsync_opts
-  --exclude=src/ugv/planning-pc
-  --exclude=src/uav/"
+  --exclude=src/ugv/planning-pc"
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=src/ugv/planning-pc
-  --exclude=src/uav/"
+  --exclude=src/ugv/planning-pc"
 
 # export the current sourced scenario file
 export ROBOT_SCENARIO_FILE=${BASH_SOURCE}
