deployerbooks: changing 'shared' to 'base' in ws

--- a/deploybooks/workspaces/base/perception.yaml
+++ b/deploybooks/workspaces/base/perception.yaml
@@ -20,6 +20,7 @@
 
     - source /opt/ros/melodic/setup.bash
     - +extend: catkin/common
+    - +extend: catkin/uav
     - deps:
       - export CATKIN_WORKSPACE=perception/deps/catkin
       - +extend: catkin/build
