--- a/deploybooks/workspaces/uav.canary.yaml
+++ b/deploybooks/workspaces/uav.canary.yaml
@@ -1,7 +1,7 @@
 - scenarios:
   # extend common workspaces
-  - +extend: workspaces/shared/melodic
-  - +extend: workspaces/shared/super
+  - +extend: workspaces/base/melodic
+  - +extend: workspaces/base/super
 
   - core:
     # setup docker service name
