--- a/deploybooks/workspaces/ugv.ppc.yaml
+++ b/deploybooks/workspaces/ugv.ppc.yaml
@@ -1,6 +1,6 @@
 - scenarios:
   # common remote sync actions
-  - +extend: workspaces/shared/melodic
+  - +extend: workspaces/base/melodic
 
   - core:
     # setup docker service name
