--- a/deploybooks/workspaces/uav.simulation.yaml
+++ b/deploybooks/workspaces/uav.simulation.yaml
@@ -1,6 +1,6 @@
 - scenarios:
-  - +extend: workspaces/shared/melodic
-  - +extend: workspaces/shared/super
+  - +extend: workspaces/base/melodic
+  - +extend: workspaces/base/super
 
   - core:
     # setup docker service name
@@ -31,7 +31,7 @@
 
   - perception:
     - export SCENARIOS_PLATFORM=uav.perception
-    - +extend: workspaces/shared/perception
+    - +extend: workspaces/base/perception
 
   - wifi:
-    - +extend: workspaces/shared/perception.wifi
+    - +extend: workspaces/base/perception.wifi
