--- a/deploybooks/workspaces/basestation.yaml
+++ b/deploybooks/workspaces/basestation.yaml
@@ -2,7 +2,7 @@
   - +extend: workspaces/base/melodic
 
   - core:
-    # setup docker service name
+    # export the docker compose service name
     - export SERVICE=core
 
     # setup pre-defined environment variables, for workspace env import
