--- a/deploybooks/workspaces/uav.simulation.yaml
+++ b/deploybooks/workspaces/uav.simulation.yaml
@@ -3,34 +3,23 @@
   - +extend: workspaces/base/super
 
   - core:
-    # setup docker service name
-    - export SERVICE=core
-
     # setup the docker container name (local or remote host)
-    - +env:DOCKER_CONTAINER=$ROBOT-shell
+    - +env:DOCKER_CONTAINER=${ROBOT}-shell
 
-    # import the workspace environment setup
-    - set_workspace_configuration
-    - set_docker_compose_service
-
-    # override any default environment setups
-    - export DOCKER_BASE_IMAGE_PROJECT=superodometry
-
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
-    - catkin:
-      - export CATKIN_PROFILE=uav.core
-      - +import:env/catkin.env
-
-      - +extend: catkin/px4
-      - +extend: catkin/common
-      - +extend: catkin/uav
-      - +extend: catkin/simulation
-      - +extend: catkin/subt_launch
+    # extend the base uav core workspace
+    - +extend: workspaces/base/uav.core
 
   - perception:
+    # export the docker compose service name
+    - export SERVICE=perception
+
+    # setup pre-defined environment variables, for workspace env import
+    - +env:DOCKER_CONTAINER=${ROBOT}-perception-shell
+
+    # export the scenarios platform -- for which scenarios to source
     - export SCENARIOS_PLATFORM=uav.perception
+
+    # extend the base perception workspace
     - +extend: workspaces/base/perception
 
   - wifi:
