--- a/deploybooks/workspaces/ugv.xavier.yaml
+++ b/deploybooks/workspaces/ugv.xavier.yaml
@@ -1,31 +1,12 @@
 - scenarios:
   - +extend: workspaces/base/melodic
-  # TODO: chonky...
 
   - core:
-    # setup docker service name
+    # export the docker compose service name
     - export SERVICE=core
 
     # setup pre-defined environment variables, for workspace env import
     - +env:DOCKER_CONTAINER=${ROBOT}-core-shell
 
-    # import the workspace environment setup
-    - set_workspace_configuration
-    - set_docker_compose_service
-
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
-    - catkin:
-      - export CATKIN_PROFILE=ugv.xavier.perception
-      - +import:env/catkin.env
-
-      - source /opt/ros/melodic/setup.bash
-      - +extend: catkin/common
-      - +extend: catkin/uav
-      - deps:
-        - export CATKIN_WORKSPACE=perception/deps/catkin
-        - +extend: catkin/build
-        - +extend: catkin/clean
-      - +extend: catkin/perception
-      - +extend: catkin/subt_launch
+    # extend the base perception workspace
+    - +extend: workspaces/base/perception
