--- a/deploybooks/workspaces/catkin/simulation.yaml
+++ b/deploybooks/workspaces/catkin/simulation.yaml
@@ -1,11 +1,11 @@
 - darpa:
   - export CATKIN_WORKSPACE=simulation/darpa/catkin
-  - +extend: catkin/build
-  - +extend: catkin/clean
+  - +extend: workspaces/catkin/build
+  - +extend: workspaces/catkin/clean
 
 - core:
   - export CATKIN_WORKSPACE=simulation/
   # TEMPORARY! REALLY BAD.
   - touch $SUBT_PATH/simulation/velodyne_simulator/velodyne_gazebo_plugins/CATKIN_IGNORE
-  - +extend: catkin/build
-  - +extend: catkin/clean
+  - +extend: workspaces/catkin/build
+  - +extend: workspaces/catkin/clean
