--- a/deploybooks/workspaces/ugv.simulation.yaml
+++ b/deploybooks/workspaces/ugv.simulation.yaml
@@ -25,11 +25,11 @@
       - export CATKIN_PROFILE=ugv.core
       - +import:env/catkin.env
 
-      - +extend: catkin/common
-      - +extend: catkin/ugv
-      - +extend: catkin/uav
-      - +extend: catkin/simulation
-      - +extend: catkin/subt_launch
+      - +extend: workspaces/catkin/common
+      - +extend: workspaces/catkin/ugv
+      - +extend: workspaces/catkin/uav
+      - +extend: workspaces/catkin/simulation
+      - +extend: workspaces/catkin/subt_launch
 
   - perception:
     # export the docker compose service name
