--- a/deploybooks/workspaces/ugv.nuc.yaml
+++ b/deploybooks/workspaces/ugv.nuc.yaml
@@ -17,9 +17,15 @@
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
 
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
+    # extend docker actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+    # extend catkin actions
     - catkin:
       - export CATKIN_PROFILE=ugv.nuc
       - +import:env/catkin.env
@@ -40,9 +46,15 @@
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
 
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
+    # extend docker actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+    # extend catkin actions
     - catkin:
       - export CATKIN_PROFILE=ugv.nuc.slam
       - +import:env/catkin.host.env
