--- a/deploybooks/workspaces/base/melodic.yaml
+++ b/deploybooks/workspaces/base/melodic.yaml
@@ -8,6 +8,7 @@
   # setup the docker service calls
   - export DOCKER_COMPOSE_SERVICE=${SCENARIOS_PLATFORM}-ros
 
-  # extend only docker calls
-  - +extend: common/docker.registry
-  - +extend: common/docker
+  # extend docker actions
+  - docker:
+    - +extend: common/docker/registry
+    - +extend: common/docker/make
