--- a/deploybooks/workspaces/base/super.yaml
+++ b/deploybooks/workspaces/base/super.yaml
@@ -11,6 +11,7 @@
   # setup the docker service calls
   - export DOCKER_COMPOSE_SERVICE=${SCENARIOS_PLATFORM}-superodometry
 
-  # extend only docker calls
-  - +extend: common/docker.registry
-  - +extend: common/docker
+  # extend docker actions
+  - docker:
+    - +extend: common/docker/registry
+    - +extend: common/docker/make
