--- a/deploybooks/workspaces/basestation.yaml
+++ b/deploybooks/workspaces/basestation.yaml
@@ -12,10 +12,15 @@
     - set_workspace_configuration
     - set_docker_compose_service
 
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
+    # extend docker actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
 
+    # extend catkin actions
     - catkin:
       - export CATKIN_PROFILE=basestation
       - +import:env/catkin.env
