--- a/deploybooks/workspaces/ugv.simulation.yaml
+++ b/deploybooks/workspaces/ugv.simulation.yaml
@@ -18,9 +18,15 @@
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
 
-    # extend general actions
-    - +extend: common/docker.registry
-    - +extend: common/docker
+    # extend docker actions
+    - docker:
+      - +extend: common/docker/registry
+      - +extend: common/docker/make
+      - +extend: common/docker/start
+      - +extend: common/docker/stop
+      - +extend: common/docker/rm
+
+    # extend catkin actions
     - catkin:
       - export CATKIN_PROFILE=ugv.core
       - +import:env/catkin.env
