deployerbooks: fixing wifi typos

--- a/deploybooks/workspaces/uav.simulation.yaml
+++ b/deploybooks/workspaces/uav.simulation.yaml
@@ -23,4 +23,4 @@
     - +extend: workspaces/base/perception
 
   - wifi:
-    - +extend: workspaces/base/perception.wifi
+    - +extend: workspaces/base/wifi
