--- a/deploybooks/workspaces/ugv.nuc.yaml
+++ b/deploybooks/workspaces/ugv.nuc.yaml
@@ -63,4 +63,4 @@
       - +extend: workspaces/catkin/subt_launch
 
   - wifi:
-    - +extend: workspaces/base/perception.wifi
+    - +extend: workspaces/base/wifi
