--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -11,6 +11,8 @@ export AZURE_REGISTRY="subtexplore.azurecr.io"
 export BASESTATION_REGISTRY="system76-pc:5000"
 export DRONE_LAPTOP_REGISTRY="john-pc:5000"
 export LOCAL_REGISTRY="localhost:5000"
+# setup the docker registry being used for docker pull
+export DOCKER_REGISTRY=$AZURE_REGISTRY
 
 # -- docker network setup --
 
