--- a/deploybooks/workspaces/uav.canary.yaml
+++ b/deploybooks/workspaces/uav.canary.yaml
@@ -21,5 +21,5 @@
     - +extend: workspaces/base/perception
 
   - wifi:
-    - +extend: workspaces/base/perception.wifi
+    - +extend: workspaces/base/wifi
 
