--- a/deploybooks/workspaces/uav.ds.yaml
+++ b/deploybooks/workspaces/uav.ds.yaml
@@ -1,7 +1,7 @@
 - scenarios:
   # extend common workspaces
-  - +extend: workspaces/shared/melodic
-  - +extend: workspaces/shared/super
+  - +extend: workspaces/base/melodic
+  - +extend: workspaces/base/super
 
   - core:
     # setup pre-defined environment variables, for workspace env import
@@ -21,5 +21,5 @@
     - +extend: workspaces/base/perception
 
   - wifi:
-    - +extend: workspaces/base/perception.wifi
+    - +extend: workspaces/base/wifi
 
