--- a/deploybooks/workspaces/spot.xavier.yaml
+++ b/deploybooks/workspaces/spot.xavier.yaml
@@ -1,5 +1,5 @@
 - scenarios:
-  - +extend: workspaces/shared/melodic
+  - +extend: workspaces/base/melodic
   
   - cameras:
     # setup docker service name
@@ -44,13 +44,13 @@
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
-      - +extend: catkin/common
+      - +extend: workspaces/catkin/common
       - deps:
         - export CATKIN_WORKSPACE=perception/deps/catkin
-        - +extend: catkin/build
-        - +extend: catkin/clean
-      - +extend: catkin/perception
-      - +extend: catkin/subt_launch
+        - +extend: workspaces/catkin/build
+        - +extend: workspaces/catkin/clean
+      - +extend: workspaces/catkin/perception
+      - +extend: workspaces/catkin/subt_launch
 
   - drivers:
     # setup docker service name
@@ -76,8 +76,8 @@
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
-      - +extend: catkin/ugv
-      - +extend: catkin/subt_launch
+      - +extend: workspaces/catkin/ugv
+      - +extend: workspaces/catkin/subt_launch
 
   - core:
     # setup docker service name
@@ -103,5 +103,5 @@
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
-      - +extend: catkin/ugv
-      - +extend: catkin/subt_launch
+      - +extend: workspaces/catkin/ugv
+      - +extend: workspaces/catkin/subt_launch
