--- a/deploybooks/workspaces/spot.xavier.yaml
+++ b/deploybooks/workspaces/spot.xavier.yaml
@@ -45,6 +45,7 @@
 
       - source /opt/ros/melodic/setup.bash
       - +extend: workspaces/catkin/common
+      - +extend: workspaces/catkin/uav
       - deps:
         - export CATKIN_WORKSPACE=perception/deps/catkin
         - +extend: workspaces/catkin/build
@@ -76,6 +77,7 @@
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
+      - +extend: workspaces/catkin/common
       - +extend: workspaces/catkin/ugv
       - +extend: workspaces/catkin/subt_launch
 
@@ -103,5 +105,6 @@
       - +import:env/catkin.env
 
       - source /opt/ros/melodic/setup.bash
+      - +extend: workspaces/catkin/common
       - +extend: workspaces/catkin/ugv
       - +extend: workspaces/catkin/subt_launch
