--- a/scenarios/systems/robot/spot.xavier.env
+++ b/scenarios/systems/robot/spot.xavier.env
@@ -30,7 +30,7 @@ export GPU_ENABLE_TYPE="arm-gpu-chonky"
 # deployer, rsync exclude options
 # -- see operations/scenarios/transfer/.ugv.env for details
 export deploy_rsync_opts="$deploy_rsync_opts
-  --exclude=src/uav/
+  --exclude=src/uav/slam
   --exclude=src/ugv/planning-pc/
   --exclude=src/ugv/nuc/
   --exclude=src/ugv/simulation/
@@ -39,7 +39,7 @@ export deploy_rsync_opts="$deploy_rsync_opts
 
 export skel_deploy_rsync_opts="
   $skel_deploy_rsync_opts
-  --exclude=src/uav/
+  --exclude=src/uav/slam
   --exclude=src/ugv/planning-pc/
   --exclude=src/ugv/nuc/
   --exclude=src/ugv/simulation/
